--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -4,5 +4,6 @@
   <ul>
     <li><a href="/">Home</a></li>
     <li><a href="/about">About</a></li>
+    <li><a href="/projects">Projects</a></li>
   </ul>
 </header>
